test/analysis/reject/duplicate-field-record.ptk
# expected: E1307

node bad = record
    x: `bool`,
    y: `bool`,
    x: `bool`
;